--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
     "esbuild": "^0.25.9",
     "eslint": "^9.34.0",
+    "husky": "^9.1.7",
     "jest": "^30.0.5",
+    "lint-staged": "^15.5.2",
+    "prettier": "^3.6.2",
     "serverless": "^4.18.1",
     "serverless-esbuild": "^1.55.1",
     "serverless-offline": "^14.4.0",
