--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,8 @@
 {
   "semi": true,
-  "singleQuote": false,
+  "singleQuote": true,
   "printWidth": 100,
   "tabWidth": 2,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "arrowParens": "always"
 }
