feat: add client dynamondb

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
     "aws-lambda": "^1.0.7",
+    "dynamodb-localhost": "^0.0.9",
     "esbuild": "^0.25.9",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
@@ -41,6 +42,7 @@
     "lint-staged": "^15.5.2",
     "prettier": "^3.6.2",
     "serverless": "^3.40.0",
+    "serverless-dynamodb-local": "^0.2.40",
     "serverless-esbuild": "^1.55.1",
     "serverless-offline": "^13.9.0",
     "ts-jest": "^29.4.1",
