--- a/serverless.yml
+++ b/serverless.yml
@@ -95,6 +95,12 @@ functions:
       - httpApi:
           method: PATCH
           path: /orders/confirm/{orderId}
+  createProducts:
+    handler: src/handlers/createProducts.handler
+    events:
+      - httpApi:
+          method: POST
+          path: /products
 
 resources:
   Resources:
