--- a/package.json
+++ b/package.json
@@ -38,16 +38,18 @@
     "eslint-plugin-import": "^2.32.0",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
+    "isomorphic-ws": "^5.0.0",
     "jest": "^30.0.5",
     "lint-staged": "^15.5.2",
     "prettier": "^3.6.2",
     "serverless": "^3.40.0",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-esbuild": "^1.55.1",
-    "serverless-offline": "^14.4.0",
+    "serverless-offline": "^12.0.4",
     "ts-jest": "^29.4.1",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.40.0"
+    "typescript-eslint": "^8.40.0",
+    "ws": "^8.18.3"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.873.0",
