--- a/serverless.yml
+++ b/serverless.yml
@@ -14,21 +14,21 @@ provider:
     LOG_LEVEL: ${param:logLevel}
     IS_OFFLINE: ${env:IS_OFFLINE, 'false'}
 
-  iamRoleStatements:
-    - Effect: Allow
-      Action:
-        - dynamodb:DescribeTable
-        - dynamodb:PutItem
-        - dynamodb:GetItem
-        - dynamodb:Query
-        - dynamodb:UpdateItem
-        - dynamodb:DeleteItem
-        - dynamodb:BatchWriteItem
-        - dynamodb:BatchGetItem
-      Resource:
-        - arn:aws:dynamodb:${aws:region}:${aws:accountId}:table/${self:provider.environment.ORDERS_TABLE_NAME}
-        - arn:aws:dynamodb:${aws:region}:${aws:accountId}:table/${self:provider.environment.PRODUCTS_TABLE_NAME}
-        - arn:aws:dynamodb:${aws:region}:${aws:accountId}:table/${self:provider.environment.ORDERS_TABLE_NAME}/index/*
+  # iamRoleStatements:
+  #   - Effect: Allow
+  #     Action:
+  #       - dynamodb:DescribeTable
+  #       - dynamodb:PutItem
+  #       - dynamodb:GetItem
+  #       - dynamodb:Query
+  #       - dynamodb:UpdateItem
+  #       - dynamodb:DeleteItem
+  #       - dynamodb:BatchWriteItem
+  #       - dynamodb:BatchGetItem
+  #     Resource:
+  #       - arn:aws:dynamodb:${aws:region}:${aws:accountId}:table/${self:provider.environment.ORDERS_TABLE_NAME}
+  #       - arn:aws:dynamodb:${aws:region}:${aws:accountId}:table/${self:provider.environment.PRODUCTS_TABLE_NAME}
+  #       - arn:aws:dynamodb:${aws:region}:${aws:accountId}:table/${self:provider.environment.ORDERS_TABLE_NAME}/index/*
 
 params:
   dev:
@@ -107,6 +107,12 @@ functions:
       - httpApi:
           method: GET
           path: /products
+  getByIdProduct:
+    handler: src/handlers/getProductsById.handler
+    events:
+      - httpApi:
+          method: GET
+          path: /products/{productId}
 
 resources:
   Resources:
