--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   pull_request:
-    branches: ["develop", "main"]
+    branches: ['develop', 'main']
 
 concurrency:
   group: ci-${{ github.event.pull_request.number || github.ref }}
@@ -11,16 +11,18 @@ concurrency:
 jobs:
   quality:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Use Node 18 (from .nvmrc if present)
+      - name: Use Node 18
         uses: actions/setup-node@v4
         with:
-          node-version: "18" # o `node-version-file: .nvmrc`
-          cache: "npm"
+          node-version: '18'
+          cache: 'npm'
 
       - name: Install deps (clean)
         run: npm ci
@@ -29,7 +31,7 @@ jobs:
         run: npx tsc --noEmit
 
       - name: Lint
-        run: npm run lint
+        run: npm run lint --if-present
 
       - name: Test with coverage
         run: npm test -- --coverage --maxWorkers=2
