--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -2,7 +2,11 @@ name: Deploy dev
 
 on:
   push:
-    branches: ["develop"]
+    branches: ['develop']
+
+concurrency:
+  group: deploy-dev-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   deploy:
@@ -13,6 +17,7 @@ jobs:
 
     env:
       AWS_REGION: us-east-1
+      SLS_TELEMETRY_DISABLED: '1'
 
     steps:
       - name: Checkout code
@@ -21,19 +26,19 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "18"
-          cache: "npm"
+          node-version: '18'
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
 
       - name: Sanity check
-        run: npx tsc --noEmit && npm test -- --coverage
+        run: npx tsc --noEmit && npm test -- --coverage --maxWorkers=2
 
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME_DEV }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Deploy to AWS (dev)
