--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -36,6 +36,11 @@ jobs:
       - name: Final checks before deploy
         run: npx tsc --noEmit && npm test -- --coverage --maxWorkers=2
 
+      - name: Validate PROD role ARN secret present
+        run: |
+          if [ -z "${{ secrets.AWS_ROLE_TO_ASSUME_PROD }}" ]; then
+            echo "AWS_ROLE_TO_ASSUME_PROD is empty/unavailable"; exit 1; fi
+
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
