--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,17 +11,15 @@ concurrency:
 jobs:
   quality:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Use Node 18
+      - name: Use Node 18 (from .nvmrc if present)
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '18' # o `node-version-file: .nvmrc`
           cache: 'npm'
 
       - name: Install deps (clean)
@@ -31,7 +29,7 @@ jobs:
         run: npx tsc --noEmit
 
       - name: Lint
-        run: npm run lint --if-present
+        run: npm run lint
 
       - name: Test with coverage
         run: npm test -- --coverage --maxWorkers=2
