--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -4,21 +4,16 @@ on:
   push:
     branches: ['main']
 
-# concurrency:
-#   group: deploy-prod-${{ github.ref }}
-#   cancel-in-progress: true
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: production
+    environment: production # protege con approvals en Settings > Environments
     permissions:
       contents: read
       id-token: write
 
     env:
       AWS_REGION: us-east-1
-      # SLS_TELEMETRY_DISABLED: '1'
 
     steps:
       - name: Checkout code
@@ -33,19 +28,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Validate PROD role ARN secret present
-        run: |
-          if [ -z "${{ secrets.AWS_ROLE_TO_ASSUME }}" ]; then
-            echo "AWS_ROLE_TO_ASSUME_PROD is empty/unavailable"; exit 1; fi
+      - name: Final checks before deploy
+        run: npx tsc --noEmit && npm test -- --coverage
 
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           aws-region: ${{ env.AWS_REGION }}
-
-      - name: Who am I?
-        run: aws sts get-caller-identity
 
       - name: Deploy to AWS (prod)
         run: npx serverless deploy --stage prod --region $AWS_REGION
