--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -38,7 +38,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME_PROD }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: us-east-1
 
       # Obtén URLs de API Gateway para DEV y PROD
       - name: Get DEV/PROD API URLs
