--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -61,17 +61,18 @@ jobs:
 
       - name: Ensure Swagger index
         run: |
+          mkdir -p docs
           if [ ! -f docs/index.html ]; then
             cat > docs/index.html <<'HTML'
-            <!doctype html><html><head><meta charset="utf-8"/><title>API Docs</title>
-            <link rel="stylesheet" href="https://unpkg.com/swagger-ui-dist/swagger-ui.css">
-            <style>body{margin:0}.topbar{display:none}</style></head>
-            <body><div id="swagger-ui"></div>
-            <script src="https://unpkg.com/swagger-ui-dist/swagger-ui-bundle.js"></script>
-            <script>window.onload=()=>{window.ui=SwaggerUIBundle({url:'./openapi.yaml',dom_id:'#swagger-ui',deepLinking:true})}</script>
-            </body></html>
-            HTML
-          fi
+          <!doctype html><html><head><meta charset="utf-8"/><title>API Docs</title>
+          <link rel="stylesheet" href="https://unpkg.com/swagger-ui-dist/swagger-ui.css">
+          <style>body{margin:0}.topbar{display:none}</style></head>
+          <body><div id="swagger-ui"></div>
+          <script src="https://unpkg.com/swagger-ui-dist/swagger-ui-bundle.js"></script>
+          <script>window.onload=()=>{window.ui=SwaggerUIBundle({url:'./openapi.yaml',dom_id:'#swagger-ui',deepLinking:true})}</script>
+          </body></html>
+          HTML
+              fi
 
       - uses: actions/configure-pages@v5
       - uses: actions/upload-pages-artifact@v3
